# sudoku_solver

./: .gitignore  CMakeLists.txt  README.md  sudoku_solver
src/: generator.cpp  generator.h  main.cpp  solver.cpp  solver.h  sudoku.h
ui/: difficulty.cpp  difficulty.h  login.cpp  login.h  main.cpp  main_controller.cpp  main_controller.h  main_menu.cpp  main_menu.h  main_window.cpp  main_window.h
